--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
@@ -10,13 +10,16 @@
       d:DesignHeight="900" d:DesignWidth="1280"
       Title="Manage Sprint Team">
 
-    <StackPanel Width="750" Margin="0,75,0,0">
+    <StackPanel Width="1100" Margin="0,75,0,0">
         <ContentControl Template="{StaticResource Headers}" Name="Header"/>
+
+        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Text="{Binding CurrentSprint.Project.Name}" Margin="0,0,0,15"/>
 
         <TextBlock Name="SprintNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}"  Text="{Binding CurrentSprint.Name}" Margin="0,0,0,15"/>
         
-        <Grid Height="650">
+        <Grid Height="600">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
@@ -26,57 +29,134 @@
                 <RowDefinition Height="0.15*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource Header}" Text="Available Developers" HorizontalAlignment="Center"/>
-            <ListBox Name="AvailableDevelopersListBox" Grid.Column="0" Grid.Row="1"
+            <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource Header}" Text="Unavailable Developers" HorizontalAlignment="Center"/>
+            <ListBox Name="UnavailableDevelopersListBox" Grid.Column="0" Grid.Row="1" 
+                     Style="{StaticResource DefaultListBox}" Margin="5,0,5,0" HorizontalContentAlignment="Center"
+                     ItemsSource="{Binding UnavailableDevelopers}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.2*"/>
+                                <ColumnDefinition Width="0.8*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Image Grid.Column="0" Name="CurrentDevelopersProfilePicture"
+                                           Height="64" Width="64" Stretch="Fill"
+                                           VerticalAlignment="Center">
+                                <Image.Source>
+                                    <Binding Path="ProfilePicture" Converter="{StaticResource ImageConverter}"/>
+                                </Image.Source>
+                            </Image>
+
+                            <StackPanel Width="200" Margin="40,10,15,0" Grid.Column="1">
+                                <TextBlock HorizontalAlignment="Center" Style="{StaticResource ListBoxItemHeader}">
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="Forename"/>
+                                            <Binding Path="Surname"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+
+                                <Separator/>
+
+                                <TextBlock Text="{Binding Email}" Margin="0,0,0,5" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+
+                                <ListBox ItemsSource="{Binding Sprints}" >
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" TextAlignment="Center"/>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <TextBlock Grid.Column="1" Grid.Row="0" Style="{StaticResource Header}" Text="Available Developers" HorizontalAlignment="Center"/>
+            <ListBox Name="AvailableDevelopersListBox" Grid.Column="1" Grid.Row="1"
                      Style="{StaticResource DefaultListBox}" Margin="5,0,5,0" HorizontalContentAlignment="Center"
                      ItemsSource="{Binding AvailableDevelopers}"
                      dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="0,10,0,0">
-                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource ListBoxItemHeader}">
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{}{0} {1}">
-                                        <Binding Path="Forename"/>
-                                        <Binding Path="Surname"/>
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.2*"/>
+                                <ColumnDefinition Width="0.8*"/>
+                            </Grid.ColumnDefinitions>
 
-                            <Separator/>
+                            <Image Grid.Column="0" Name="AvailableDevelopersProfilePicture"
+                                           Height="64" Width="64" Stretch="Fill"
+                                           VerticalAlignment="Center">
+                                <Image.Source>
+                                    <Binding Path="ProfilePicture" Converter="{StaticResource ImageConverter}"/>
+                                </Image.Source>
+                            </Image>
 
-                            <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
-                        </StackPanel>
+                            <StackPanel Width="200" Margin="40,10,15,0" Grid.Column="1">
+                                <TextBlock HorizontalAlignment="Center" Style="{StaticResource ListBoxItemHeader}">
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="Forename"/>
+                                            <Binding Path="Surname"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+
+                                <Separator/>
+
+                                <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <TextBlock Grid.Column="1" Grid.Row="0" Style="{StaticResource Header}" Text="Current Developers" HorizontalAlignment="Center"/>
-            <ListBox Name="SprintTeamListBox" Grid.Column="1" Grid.Row="1" 
+            <TextBlock Grid.Column="2" Grid.Row="0" Style="{StaticResource Header}" Text="Current Developers" HorizontalAlignment="Center"/>
+            <ListBox Name="SprintTeamListBox" Grid.Column="2" Grid.Row="1" 
                      Style="{StaticResource DefaultListBox}" Margin="5,0,5,0" HorizontalContentAlignment="Center"
                      ItemsSource="{Binding SprintTeam}"
                      dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="0,5,0,5">
-                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource ListBoxItemHeader}">
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{}{0} {1}">
-                                        <Binding Path="Forename"/>
-                                        <Binding Path="Surname"/>
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.2*"/>
+                                <ColumnDefinition Width="0.8*"/>
+                            </Grid.ColumnDefinitions>
 
-                            <Separator/>
+                            <Image Grid.Column="0" Name="CurrentDevelopersProfilePicture"
+                                           Height="64" Width="64" Stretch="Fill"
+                                           VerticalAlignment="Center">
+                                <Image.Source>
+                                    <Binding Path="ProfilePicture" Converter="{StaticResource ImageConverter}"/>
+                                </Image.Source>
+                            </Image>
 
-                            <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
-                        </StackPanel>
+                            <StackPanel Width="200" Margin="40,10,15,0" Grid.Column="1">
+                                <TextBlock HorizontalAlignment="Center" Style="{StaticResource ListBoxItemHeader}">
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="Forename"/>
+                                            <Binding Path="Surname"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+
+                                <Separator/>
+
+                                <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <Button Grid.Column="0" Grid.Row="2" Name="BackButton" Content="Back" 
+            <Button Grid.Column="1" Grid.Row="2" Name="BackButton" Content="Back" 
                     Style="{StaticResource StandardButton}" HorizontalAlignment="Right" Margin="0,10,15,0" Command="{Binding BackCommand}"/>
             <Button Grid.Column="1" Grid.Row="2" Name="SaveButton" 
                     Content="Save Team" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="15,10,0,0" Command="{Binding SaveTeamCommand}"/>
