--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -10,9 +10,10 @@
       Title="Sprint Dashboard">
 
     <StackPanel>
-
-
         <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
+
+        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Text="{Binding CurrentSprint.Project.Name}" Margin="0,0,0,15"/>
+
         <Grid Margin ="20,20,20,0">
             <Grid.ColumnDefinitions >
                 <ColumnDefinition Width="*"/>
