--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -64,6 +64,14 @@
             </PasswordBox>
         </AdornerDecorator>
 
+        <AdornerDecorator Margin="0,12,0,0">
+            <TextBox Name="UserSkillSetTextBox" Style="{StaticResource DefaultTextBox}" HorizontalContentAlignment="Center">
+                <utility:WatermarkService.Watermark>
+                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="EnterSkillSetTextBlock">Enter your skillset (separate using commas)</TextBlock>
+                </utility:WatermarkService.Watermark>
+            </TextBox>
+        </AdornerDecorator>
+
         <Grid Margin="15,15,15,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -95,7 +103,7 @@
                 </CheckBox.LayoutTransform>
             </CheckBox>
         </Grid>
-
+        
         <Grid Margin="100,15,100,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
