Conor: Burndown chart UI

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
+      xmlns:oxy="http://oxyplot.org/wpf"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="900" d:DesignWidth="1280"
@@ -113,7 +114,9 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-
+            
+            <oxy:PlotView x:Name="Plot1"  Model="{Binding PlotModel}" Grid.Row="4" Grid.Column="0" Margin ="20,5,15,0"/>
+            
             <TextBlock Text="User Stories Tasks" Grid.Column="1" Grid.Row="3" Style="{StaticResource Label}" Foreground="Gold" HorizontalAlignment="Center" Margin="5,0,0,0" />
             <ListBox Grid.Row ="4" Grid.Column="1" Name="StoryTasks" 
                      Style="{StaticResource DefaultListBox}" Margin ="0,5,15,0" HorizontalContentAlignment="Center"
