Darren: Fixed functionality of assign buttons and permissions for sprint dashboard

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
@@ -21,6 +21,7 @@
             <utility:BoolToHiddenConverter x:Key="BoolToHiddenConverter"/>
             <utility:UserImagePathValueConverter x:Key="ImageConverter"/>
             <utility:BoolToEnabledConverter x:Key="BoolToEnabledConverter"/>
+            <utility:NullToVisibilityConverter x:Key="NullToVisConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
