--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
@@ -63,10 +63,10 @@
 
                                 <TextBlock Text="{Binding Email}" Margin="0,0,0,5" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
 
-                                <ListBox ItemsSource="{Binding Sprints}" >
+                                <ListBox ItemsSource="{Binding Sprints}" Style="{StaticResource DefaultListBox}" HorizontalContentAlignment="Center">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
-                                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" TextAlignment="Center"/>
+                                            <TextBlock Text="{Binding Name}" TextAlignment="Center"/>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
