--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -163,8 +163,8 @@
                                 <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Margin="10,0,10,0"/>
 
                                 <Button  Margin ="0,0,0,0" Name="Assign" HorizontalAlignment="Right" Content="Assign to Me" Style="{StaticResource StandardButton}"  
-                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path =DataContext.AssignCommand}" CommandParameter="{Binding}" 
-                                    />
+                                         Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path =DataContext.AssignCommand}" CommandParameter="{Binding}"
+                                         Visibility="{Binding Assignee, Converter={StaticResource NullToVisConverter}}"/>
 
                             </StackPanel>
 
@@ -185,7 +185,7 @@
                 Style="{StaticResource StandardButton}"
                 HorizontalAlignment="Center"
                 Command="{Binding NavigateToManageSprintsCommand}"
-                Visibility="{Binding Path=Permissions.ScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
+                Visibility="{Binding Path=IsSprintScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
             <Button  Grid.Row ="5" Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Grid.Column="0" Command="{Binding BackCommand}"/>
 
             <Button   Grid.Row ="5" Name="EditSprintBacklog"
@@ -194,7 +194,7 @@
                 HorizontalAlignment="Right"
                 Grid.Column="1"
                 Command="{Binding NavigateToManageSprintBacklogCommand}"
-                Visibility="{Binding Path=Permissions.ScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
+                Visibility="{Binding Path=IsSprintScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
 
 
 
