--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -10,10 +10,17 @@
       d:DesignHeight="900" d:DesignWidth="1280"
       Title="Sprint Dashboard">
 
-    <StackPanel>
+    <StackPanel Width="750" Margin="0,75,0,0">
         <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
 
-        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Text="{Binding CurrentSprint.Project.Name}" Margin="0,0,0,15"/>
+        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Margin="0,0,0,15">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0} - {1}">
+                    <Binding Path="CurrentSprint.Project.Name"/>
+                    <Binding Path="CurrentSprint.Name"/>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
 
         <Grid Margin ="20,20,20,0">
             <Grid.ColumnDefinitions >
