Zoey:Renaming Button

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateTask.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateTask.xaml
@@ -48,8 +48,8 @@
                 </AdornerDecorator>
                 <ComboBox Grid.Row="3" Margin="0,6,0,0" Name="AssigneesComboBox" IsEditable="True" Text="Select assignee...">
                 </ComboBox>
-                <Button Name="BackButton" Grid.Column="1" Margin="0,6,0,0" Content="Back Button" Grid.Row="4" HorizontalAlignment="Left" Style="{StaticResource StandardButton}" Command="{Binding BackCommand}"/>
-                <Button Name="CreateButton" Grid.Column="1" Margin="0,6,0,0" Content="Create Button"  Grid.Row="4" HorizontalAlignment="Right" Style="{StaticResource StandardButton}" Command="{Binding CreateCommand}"/>
+                <Button Name="BackButton" Grid.Column="1" Margin="0,6,0,0" Content="Back" Grid.Row="4" HorizontalAlignment="Left" Style="{StaticResource StandardButton}" Command="{Binding BackCommand}"/>
+                <Button Name="CreateButton" Grid.Column="1" Margin="0,6,0,0" Content="Create Task"  Grid.Row="4" HorizontalAlignment="Right" Style="{StaticResource StandardButton}" Command="{Binding CreateCommand}"/>
 
             </Grid>
              </Grid>
