--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/TaskDetails.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/TaskDetails.xaml
@@ -64,6 +64,11 @@
         <Grid Height="400" Margin="0,12,0,0">
             <ListBox Name="DailyEstimateListBox" ItemsSource="{Binding DailyEstimates}"
                      Style="{StaticResource DefaultListBox}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}">
+                        <Setter Property="Visibility" Value="{Binding Date, Converter={StaticResource TaskEstimationVisConverter}}"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid Margin="0,12,0,0">
